profile alignment fixed

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -12,7 +12,7 @@
       left: 0;
       right: 0;
       z-index: 100;
-      height: 50px;
+      height: 40px;
     }
 
 .m-2{
