--- a/src/Components/loginform.css
+++ b/src/Components/loginform.css
@@ -21,7 +21,7 @@ body{
 .h2login{
     align-items: center;
    padding:10px;
-   font-family: Calibri;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:20px;
     text-transform: uppercase;
     margin-top: -40px;
@@ -31,7 +31,7 @@ body{
 .h3login{
     text-align: center;
     font-family: Calibri serif;
-    margin-left: -55px;
+    margin-left: -100px;
     padding: 3px;
    margin-top: 2px;
    color:white;
@@ -41,7 +41,7 @@ body{
 
 .cover {
     border: 0.5px solid #dad5cf;
-    width: 20em;
+    width: 25em;
     background-color:rgba(13, 26, 52, 0.9);
     position:fixed;
     border-radius: 0.7em;
@@ -131,7 +131,7 @@ body{
     text-align: left;
    font-size:larger;
     justify-items: center;
-    margin-left: 25px;
+    margin-left: 30px;
     margin-top: 6px;
     
 }
@@ -144,6 +144,6 @@ body{
     text-align: left;
     font-size:larger;
     justify-items: center;
-    margin-left: 25px;
+    margin-left: 30px;
     margin-top: 6px;
 }
